--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^5.6 || ^7.0",
         "contao/core-bundle": "^4",
         "schachbulle/contao-helper-bundle": ">=0",
-        "phpoffice/phpexcel": ">=1.8"
+        "phpoffice/phpspreadsheet": ">=1.11"
     },
     "conflict": {
         "contao/core": "*",
