--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^5.6 || ^7.0",
         "contao/core-bundle": "^4",
         "schachbulle/contao-helper-bundle": ">=0",
-        "phpoffice/phpspreadsheet": ">=1.11"
+        "phpoffice/phpspreadsheet": ">=1.11",
+        "menatwork/contao-multicolumnwizard-bundle": ">=3.4"
     },
     "conflict": {
         "contao/core": "*",
